CTF/k8s/backend/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: saas-app
spec:
  redirectScheme:
    scheme: https
    permanent: true
