CTF/k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: saas-app
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 8000
